--- a/app/src/main/res/layout/activity_atur_fee_biling.xml
+++ b/app/src/main/res/layout/activity_atur_fee_biling.xml
@@ -30,53 +30,22 @@
             android:orientation="vertical"
             android:padding="5dp">
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                tools:ignore="DisableBaselineAlignment">
+                app:helperTextEnabled="true">
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
+                <EditText
+                    android:id="@+id/et_bulan"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:helperTextEnabled="true"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="10dp">
+                    android:hint="@string/bulan_uppercase"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill"
+                    android:enabled="false"/>
 
-                    <EditText
-                        android:id="@+id/et_total_hari"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hari_uppercase"
-                        android:inputType="numberSigned"
-                        android:textSize="14sp"
-                        tools:ignore="Autofill"
-                        android:enabled="false"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:helperTextEnabled="true"
-                    android:layout_weight="2">
-
-                    <EditText
-                        android:id="@+id/et_total_transaksi"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/transaksi_uppercase"
-                        android:inputType="numberSigned"
-                        android:textSize="14sp"
-                        tools:ignore="Autofill"
-                        android:enabled="false"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
 
 
@@ -93,8 +62,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/total_fee_uppercase"
-                    android:inputType="phone"
-                    android:maxLength="19"
                     android:textSize="14sp"
                     tools:ignore="Autofill"
                     android:enabled="false"/>
@@ -105,14 +72,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/et_cashback"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/cash_back_uppercase"
-                    android:inputType="textCapCharacters"
                     android:textSize="14sp"
                     tools:ignore="Autofill"
                     android:enabled="false"/>
@@ -123,14 +90,14 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/et_net_fee"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/net_fee_uppercase"
-                    android:inputType="numberDecimal"
                     android:textSize="14sp"
                     tools:ignore="Autofill"
                     android:enabled="false"/>
@@ -140,8 +107,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/paddingMedium"
-                android:layout_marginBottom="@dimen/paddingMedium"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingStart="@dimen/paddingMedium"
@@ -151,7 +118,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="@string/rekening_uppercase"
+                    android:text="@string/transfer_ke_uppercase"
                     android:textColor="@color/grey_900"
                     android:textStyle="bold"
                     android:textSize="13sp" />
@@ -160,13 +127,12 @@
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
+                    android:background="@drawable/state_textview_clickable_border">
 
                     <Spinner
                         android:id="@+id/sp_rek_oto"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:entries="@array/status"
                         android:textAlignment="center" />
 
                 </RelativeLayout>
@@ -177,60 +143,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center"
-                android:gravity="center">
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="10dp">
-
-                    <EditText
-                        android:id="@+id/et_jumlah_bayar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/jumlah_bayar_uppercase"
-                        android:inputType="numberDecimal"
-                        android:textSize="14sp"
-                        tools:ignore="Autofill"
-                        android:enabled="false"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-                <ImageButton
-                    android:id="@+id/img_btn_copy"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_copy_resize"
-                    android:background="@android:color/white"
-                    tools:ignore="ContentDescription" />
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
 
                 <Button
-                    android:id="@+id/btn_simpan"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/btn_detail_fee"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="0dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@drawable/btn_rounded_accent"
                     android:textColor="@android:color/white"
-                    android:text="@string/simpan_uppercase"
-                    tools:ignore="RelativeOverlap" />
+                    android:text="@string/detail_fee_uppercase"
+                    tools:ignore="ButtonStyle,RelativeOverlap" />
 
-            </RelativeLayout>
+
+                <Button
+                    android:id="@+id/btn_nilai_unik"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"
+                    android:text="@string/buat_nilai_unik_uppercase"
+                    tools:ignore="ButtonStyle,RelativeOverlap" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
