--- a/app/src/main/res/layout/activity_atur_spot_discount.xml
+++ b/app/src/main/res/layout/activity_atur_spot_discount.xml
@@ -144,7 +144,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="@string/total_transaksi"
+                    android:hint="@string/total_transaksi_uppercase"
                     android:textSize="14sp"
                     tools:ignore="Autofill,TextFields" />
 
