--- a/app/src/main/res/layout/activity_atur_total_invoice.xml
+++ b/app/src/main/res/layout/activity_atur_total_invoice.xml
@@ -30,6 +30,7 @@
             android:padding="5dp">
 
             <LinearLayout
+                android:id="@+id/ly_tipe_inv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
