--- a/app/src/main/res/layout/activity_atur_referal.xml
+++ b/app/src/main/res/layout/activity_atur_referal.xml
@@ -47,7 +47,6 @@
                         android:layout_height="match_parent"
                         android:drawableLeft="@drawable/ic_contact_phone"
                         android:gravity="center"
-                        android:textStyle="bold"
                         android:paddingStart="10dp"
                         tools:ignore="RtlHardcoded,RtlSymmetry" />
 
@@ -67,7 +66,7 @@
                     android:id="@+id/et_namaPemilik_ref"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapCharacters"
                     android:textSize="14sp"
                     tools:ignore="Autofill,LabelFor" />
 
@@ -85,29 +84,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     tools:ignore="Autofill,LabelFor" />
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tl_email"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="@string/email_uppercase">
-
-                <EditText
-                    android:id="@+id/et_email_ref"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:textSize="14sp"
-                    tools:ignore="Autofill,LabelFor" />
-
-            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tl_namaBengkel"
@@ -121,7 +102,7 @@
                     android:id="@+id/et_namaBengkel_ref"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapCharacters"
                     android:textSize="14sp"
                     tools:ignore="Autofill" />
 
@@ -211,7 +192,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top|left"
-                    android:inputType="textCapSentences|textMultiLine"
+                    android:inputType="textCapCharacters|textMultiLine"
                     android:maxLength="2000"
                     android:maxLines="4"
                     android:textSize="14sp"
@@ -219,51 +200,71 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="@string/kota_kabupaten_uppercase">
+                android:layout_height="wrap_content">
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_kotakab_ref"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapCharacters"
-                    android:textSize="14sp"
-                    android:padding="15dp"/>
+                    android:layout_marginTop="5dp"
+                    android:hint="@string/kota_kabupaten_uppercase">
 
-            </android.support.design.widget.TextInputLayout>
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_kotakab_ref"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textCapCharacters"
+                        android:textSize="14sp"
+                        android:padding="15dp"/>
 
-            <TableLayout
+                </android.support.design.widget.TextInputLayout>
+
+                <ProgressBar
+                    android:id="@+id/pb"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginEnd="20dp"
+                    android:visibility="gone"
+                    tools:ignore="RtlHardcoded" />
+
+            </FrameLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
-                android:layout_marginBottom="10dp"
-                android:stretchColumns="*">
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-                <TableRow tools:ignore="UselessParent">
+                <CheckBox
+                    android:id="@+id/cb_setuju_regist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp" />
 
-                    <CheckBox
-                        android:id="@+id/cb_message"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/kirim_message_uppercase"
-                        android:layout_gravity="center_vertical"/>
+                <TextView
+                    android:id="@+id/tv_setuju_regist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp" />
 
-                    <Button
-                        android:id="@+id/btn_simpan_ref"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:background="@drawable/btn_rounded_accent"
-                        android:text="@string/simpan_uppercase"
-                        android:textColor="@android:color/white" />
+            </LinearLayout>
 
-                </TableRow>
 
-            </TableLayout>
+            <Button
+                android:id="@+id/btn_simpan_ref"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@drawable/btn_rounded_accent"
+                android:text="@string/simpan_uppercase"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"/>
 
         </LinearLayout>
 
