--- a/app/src/main/res/layout/activity_list_with_filter.xml
+++ b/app/src/main/res/layout/activity_list_with_filter.xml
@@ -73,9 +73,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/dialog_sort_by"/>
+        <include layout="@layout/dialog_sort_by_kontrol_layanan"/>
+
+        <include layout="@layout/dialog_sort_by_layanan"/>
 
     </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_tambah"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:visibility="gone"
+        app:backgroundTint="@color/blue_900"
+        app:srcCompat="@android:drawable/ic_input_add"
+        tools:ignore="ContentDescription" />
+
 
 </FrameLayout>
 
