--- a/app/src/main/res/layout/dialog_sort_by_layanan.xml
+++ b/app/src/main/res/layout/dialog_sort_by_layanan.xml
@@ -9,7 +9,7 @@
     app:behavior_hideable="true"
     app:behavior_peekHeight="0dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-    android:id="@+id/ly_container_filter">
+    android:id="@+id/ly_container_filter_layanan">
 
     <ImageButton
         android:visibility="gone"
@@ -47,7 +47,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -62,36 +61,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/status_uppercase"
-                        android:padding="15dp"
-                        android:layout_marginTop="15dp"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"
-                        android:background="@drawable/box_shadow"/>
-
-
-                </FrameLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:paddingTop="10dp"
-                    android:nestedScrollingEnabled="true"
-                    />
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/antrian_uppercase"
+                        android:text="@string/jenis_layanan_uppercase"
                         android:padding="15dp"
                         android:layout_marginTop="15dp"
                         android:textStyle="bold"
@@ -101,42 +71,13 @@
                 </FrameLayout>
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_antrian"
+                    android:id="@+id/rv_jenis_layanan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:paddingTop="10dp"
-                    android:nestedScrollingEnabled="true"
-                    />
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/pelanggan_uppercase"
-                        android:padding="15dp"
-                        android:layout_marginTop="15dp"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"
-                        android:background="@drawable/box_shadow"/>
-
-                </FrameLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_pelanggan"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:paddingTop="10dp"
-                    android:nestedScrollingEnabled="true"
-                    />
+                    android:nestedScrollingEnabled="true"/>
 
             </LinearLayout>
 
