--- a/app/src/main/res/layout/item_detail_fee_billing.xml
+++ b/app/src/main/res/layout/item_detail_fee_billing.xml
@@ -13,7 +13,7 @@
     android:layout_weight="5"
     android:padding="10dp"
     app:cardElevation="2dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="7dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -31,16 +31,6 @@
             <TableRow>
 
                 <TextView
-                    android:id="@+id/tv_tanggal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tanggal"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_900"
-                    android:textSize="12sp"
-                    android:layout_gravity="start" />
-
-                <TextView
                     android:id="@+id/tv_no_bukti_bayar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -48,37 +38,32 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
+                    android:layout_gravity="start" />
+
+                <TextView
+                    android:id="@+id/tv_transaksi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/transaksi"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
                     android:layout_gravity="end" />
 
 
             </TableRow>
 
             <TableRow android:layout_marginTop="@dimen/spacing_medium">
-
-                <TextView
-                    android:id="@+id/tv_jenis_transaksi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/checkin_jual_part"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_900"
-                    android:textSize="12sp"
-                    android:layout_gravity="start" />
 
                 <TextView
                     android:id="@+id/tv_total_transaksi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/rp_total"
+                    android:text="@string/total_transaksi"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:layout_gravity="end" />
-
-            </TableRow>
-
-
-            <TableRow android:layout_marginTop="@dimen/spacing_medium">
+                    android:layout_gravity="start" />
 
                 <TextView
                     android:id="@+id/tv_total_fee"
@@ -88,8 +73,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:layout_gravity="start"
-                    card_view:ignore="HardcodedText" />
+                    android:layout_gravity="end" />
 
             </TableRow>
 
